# Syncation-backend

./: docker-compose.yaml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: room.py  task.py
api/models/: room.py  task.py  user.py
api/routers/: room.py  task.py  user.py  websocket.py
api/schemas/: room.py  task.py
